--- a/FundamentosHTMLProyectoFinal/experiencia.html
+++ b/FundamentosHTMLProyectoFinal/experiencia.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,user-scalable=no">
-    <title>Fundamentos HTML, Proyecto Final</title>
+    <title>Experiencia</title>
   </head>
   <body>
     <h1>Hoja de Vida</h1>
