[REF] Agregando datos personales a la hoja de vida

--- a/FundamentosHTMLProyectoFinal/index.html
+++ b/FundamentosHTMLProyectoFinal/index.html
@@ -8,6 +8,29 @@
   <body>
     <h1>Hoja de Vida</h1>
     <h2>Juan Carlos Rivera Zamora</h2>
-    <h3>Guatemala 12 de octubre del 1983</h3>
+    <ul>
+      <li>Inicio</li>
+      <li>Educacion</li>
+      <li>Experiencia</li>
+    </ul>
+    <h3>Informacion Personal</h3>
+    <ul>
+      <li><strong>Nombre: </strong>Juan Carlos</li>
+      <li><strong>Apellido: </strong>Rivera Zamora</li>
+      <li><strong>Edad: </strong>36</li>
+    </ul>
+    <h4>Informacion de Perfil</h4>
+    <ul>
+      <li><strong>Perfil: </strong>Empresario, Inversionista</li>
+      <li><strong>Idioma: </strong>Espanol, Ingles</li>
+    </ul>
   </body>
+  <footer>
+    <p>Derechos Reservados</p>
+    <ul>
+      <li><strong>Email: </strong><a href="mailto:juancarlos.riverazamora@gmail.com">juancarlos.riverazamora@gmail.com</a>.</li>
+      <li><strong>Telefono: </strong>4211-4011</li>
+      <li><strong>Direccion: </strong>18 calle 6-15 Zona 10, Guatemala, Guatemala</li>
+    </ul>
+  </footer>
 </html>
