[REF] Creando tabla para educacion

--- a/FundamentosHTMLProyectoFinal/index.html
+++ b/FundamentosHTMLProyectoFinal/index.html
@@ -86,9 +86,9 @@
     <h1>Hoja de Vida</h1>
     <h2>Juan Carlos Rivera Zamora</h2>
     <ul>
-      <li>Inicio</li>
-      <li>Educacion</li>
-      <li>Experiencia</li>
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="educacion.html">Educacion</a></li>
+      <li><a href="experiencia.html">Experiencia</a></li>
     </ul>
     <h3>Informacion Personal</h3>
     <img src="images/FotoPerfil.jpg" alt="Foto de FotoPerfil" width="200px">
