[REF] Agrengando simbolo de derechos reservados

--- a/FundamentosHTMLProyectoFinal/experiencia.html
+++ b/FundamentosHTMLProyectoFinal/experiencia.html
@@ -109,7 +109,7 @@
 
   </body>
   <footer>
-    <p>Derechos Reservados</p>
+    <p>© Derechos Reservados</p>
     <ul>
       <li><strong>Email: </strong><a href="mailto:juancarlos.riverazamora@gmail.com">juancarlos.riverazamora@gmail.com</a>.</li>
       <li><strong>Telefono: </strong>4211-4011</li>
