--- a/FundamentosHTMLProyectoFinal/educacion.html
+++ b/FundamentosHTMLProyectoFinal/educacion.html
@@ -151,7 +151,7 @@
     </form>
 
     <footer>
-      <p>Derechos Reservados</p>
+      <p>© Derechos Reservados</p>
       <ul>
         <li><strong>Email: </strong><a href="mailto:juancarlos.riverazamora@gmail.com">juancarlos.riverazamora@gmail.com</a>.</li>
         <li><strong>Telefono: </strong>4211-4011</li>
