--- a/FundamentosHTMLProyectoFinal/index.html
+++ b/FundamentosHTMLProyectoFinal/index.html
@@ -105,7 +105,7 @@
     </ul>
   </body>
   <footer>
-    <p>Derechos Reservados</p>
+    <p>© Derechos Reservados</p>
     <ul>
       <li><strong>Email: </strong><a href="mailto:juancarlos.riverazamora@gmail.com">juancarlos.riverazamora@gmail.com</a>.</li>
       <li><strong>Telefono: </strong>4211-4011</li>
