--- a/CSSyDisenoWebResponsive/index.html
+++ b/CSSyDisenoWebResponsive/index.html
@@ -1,2 +1,8 @@
+<!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,user-scalable=no">
+    <time>Css y Diseño Web Responsive > Evaluación Final</title>
+  </head>
 </html>
