--- a/CSSyDisenoWebResponsive/index.html
+++ b/CSSyDisenoWebResponsive/index.html
@@ -1,8 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <link rel="stylesheet" href="css/estilos.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,user-scalable=no">
-    <time>Css y Diseño Web Responsive > Evaluación Final</title>
+    <title>Css y Diseño Web Responsive > Evaluación Final</title>
   </head>
+  <body>
+    <div class="container" role="main">
+      <div class="c1">
+        <h1>Comenzando con la fotografía</h1>
+      </div>
+      <div class="c2">
+        <div class="c21"><p>Inicio</p></div>
+        <div class="c22"><p>Paisajes</p></div>
+        <div class="c23"><p>Retratos</p></div>
+      </div>
+    </div>
+  </body>
 </html>
