[REF] Se agregaron los campos de encabezado, cuerpo y pie de pagina a la pagina de inicio

--- a/CSSyDisenoWebResponsive/index.html
+++ b/CSSyDisenoWebResponsive/index.html
@@ -17,5 +17,45 @@
         <div class="c23"><p>Retratos</p></div>
       </div>
     </div>
+    <div class="c3">
+      <div id="imagen1" class="contenedorImagen1">
+        <img src="images/catarata01.jpg" width="800px">
+      </div>
+    </div>
+    <div class="c4">
+      <div id="imagen2" class="contenedorImagen2">
+        <img src="images/catarata02.jpg" height="400px">
+        <p>Paisajes</p>
+      </div>
+      <div id="imagen3" class="contenedorImagen3">
+        <img src="images/retrato01.jpg" height="400px">
+        <p>Retratos</p>
+      </div>
+    </div>
+    <footer>
+      <div class="containerPiePagina">
+        <div class="cFoot5">
+          <p>Contacto</p>
+          <p>juancarlos.riverazamora@gmail.com</p>
+          <p> 18 calle 6-15 Zona 10</p>
+          <p>(502)-42114011</p>
+        </div>
+        <div class="cFoot6">
+          <p>Terminos</p>
+          <p>Todos nuestros productos y servicios tiene garantia</p>
+        </div>
+        <div class="cFoot7">
+          <p>Redes Sociales</p>
+          <p><a class="icon icon-facebook color-light" href="https://www.facebook.com" target="_blank">facebook</a>Facebook Equipo de fotografía</p>
+          <p><a class="icon icon-twitter color-light" href="https://www.twitter.com" target="_blank">twitter</a>Twitter Equipo de fotografía</p>
+          <p><a class="icon icon-youtube color-light" href="https://www.youtube.com" target="_blank">youtube</a>Youtube Equipo de fotografía</p>
+        </div>
+        <div class="cFoot8">
+          <p>Derechos</p>
+          <p>© Derechos Reservados 2018</p>
+          <p>Juan Carlos Rivera Zamora</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
