--- a/CSSyDisenoWebResponsive/index.html
+++ b/CSSyDisenoWebResponsive/index.html
@@ -12,9 +12,11 @@
         <h1>Comenzando con la fotografía</h1>
       </div>
       <div class="c2">
-        <div class="c21"><p>Inicio</p></div>
-        <div class="c22"><p>Paisajes</p></div>
-        <div class="c23"><p>Retratos</p></div>
+        <div class="c24">
+          <div class="c21"><p>Inicio</p></div>
+          <div class="c22"><p>Paisajes</p></div>
+          <div class="c23"><p>Retratos</p></div>
+      </div>
       </div>
     </div>
     <div class="c3">
