--- a/CSSyDisenoWebResponsive/index.html
+++ b/CSSyDisenoWebResponsive/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,user-scalable=no">
@@ -13,9 +14,9 @@
       </div>
       <div class="c2">
         <div class="c24">
-          <div class="c21"><p>Inicio</p></div>
-          <div class="c22"><p>Paisajes</p></div>
-          <div class="c23"><p>Retratos</p></div>
+          <div class="c21"><a class="aInicio" href="">Inicio</a></div>
+          <div class="c22"><a href="paisajes.html">Paisajes</a></div>
+          <div class="c23"><a href="retratos.html">Retratos</a></div>
       </div>
       </div>
     </div>
@@ -37,23 +38,23 @@
     <footer>
       <div class="containerPiePagina">
         <div class="cFoot5">
-          <p>Contacto</p>
+          <p><strong>Contacto</strong></p>
           <p>juancarlos.riverazamora@gmail.com</p>
           <p> 18 calle 6-15 Zona 10</p>
           <p>(502)-42114011</p>
         </div>
         <div class="cFoot6">
-          <p>Terminos</p>
+          <p><strong>Terminos</strong></p>
           <p>Todos nuestros productos y servicios tiene garantia</p>
         </div>
         <div class="cFoot7">
-          <p>Redes Sociales</p>
+          <p><strong>Redes Sociales</strong></p>
           <p><a class="icon icon-facebook color-light" href="https://www.facebook.com" target="_blank">facebook</a>Facebook Equipo de fotografía</p>
           <p><a class="icon icon-twitter color-light" href="https://www.twitter.com" target="_blank">twitter</a>Twitter Equipo de fotografía</p>
           <p><a class="icon icon-youtube color-light" href="https://www.youtube.com" target="_blank">youtube</a>Youtube Equipo de fotografía</p>
         </div>
         <div class="cFoot8">
-          <p>Derechos</p>
+          <p><strong>Derechos</strong></p>
           <p>© Derechos Reservados 2018</p>
           <p>Juan Carlos Rivera Zamora</p>
         </div>
